fixed about section gap

--- a/style.css
+++ b/style.css
@@ -264,8 +264,8 @@ section {
   flex-direction: column;
   align-items: center;
   position: relative;
-  gap: 2rem;
-  top: 1rem;
+  gap: 0.5rem;
+  top: 0.1rem;
 }
 .section__content > div {
   margin: 5px;
@@ -348,8 +348,6 @@ section {
   height:100%;
 }
 
-
-
 .skills-container {
   display: flex;
   flex-direction: column;
@@ -357,7 +355,6 @@ section {
   width: 100%;
   gap: 1rem;
 }
-
 
 .skills-container h3 {
   margin: 0;
@@ -425,17 +422,16 @@ section {
   }
   .section__content {
     flex-direction: column;
-    gap: 3rem;
+    gap: 0.1rem;
   }
   .about-main-content {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 3rem;
+    gap: 2rem;
   }
   
   .section__pic-container {
-    /* flex: 0 0 370px; */
     display: flex;
     justify-content: center;
     margin: 0;
